Fix header align problem

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -4,6 +4,7 @@
   justify-content: space-between;
   height: 50px;
   padding: 20px;
+  position: relative;
 
   &-social {
     display: flex;
